--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "predoploy": "npm run build-only",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "build": "run-p type-check build-only",
     "build-only": "vite build",
